# rag-chatbot

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  fly.toml
.github/workflows/: ci.yml  fly-deploy.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: auth.py  chat.py  documents.py
backend/app/core/: auth.py  embedder.py  ingestion.py  llm.py  rag_chain.py  usage.py  vectorstore.py
backend/app/db/: database.py  models.py
backend/app/schemas/: chat.py  document.py
backend/tests/: conftest.py  sample.md  test_auth.py
deploy/: Caddyfile  docker-compose.prod.yml
docs/: DEPLOY_AWS.md  DEPLOY_ORACLE.md  architecture.md  project-guide-ko.md
frontend/: index.html
frontend/public/samples/: orbit-mobility.md  stellar-bank-faq.md  루미나 X100 카메라 설명서.txt
frontend/src/: App.vue  store.js  style.css
frontend/src/api/: client.js
frontend/src/components/: ChatPanel.vue  ConversationSidebar.vue  DocList.vue  DocPreviewModal.vue  DocumentPanel.vue  LoginGate.vue  TutorialOverlay.vue
