[project]
name = "rag-chatbot-backend"
version = "0.1.0"
description = "RAG-based document Q&A chatbot backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.12",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-aws>=0.2.0",
    "boto3>=1.35.0",
    "langchain-chroma>=0.1.0",
    "chromadb>=0.5.0",
    "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.28.1",
    "starlette>=0.41.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
